fix horizontal scroll issue

--- a/css/main.less
+++ b/css/main.less
@@ -635,10 +635,16 @@ body {
 	#views {
 		padding: 0 5px;
 	}
-	#quran #page:before {
-		width: 5px;
+	#quran {
+		.page div.sura {
+			margin-right: -5px;
+			margin-left: -5px;
+		}
+		#page:before {
+			width: 5px;
+		}
 	}
-	.fill, .tafsir-text .active, .page {
+	.fill, .tafsir-text .active, .page, .ayas {
 		padding: 0 5px;
 		margin: 0 -5px;
 	}
@@ -668,10 +674,6 @@ body {
 		height: calc(~"100% - 40px");
 	}
 	#quran {
-		.page div.sura {
-			margin-right: -10px;
-			margin-left: -10px;
-		}
 		#page.is-dragging:before, #page.active:before {
 			left: 0;
 		}
@@ -681,5 +683,11 @@ body {
 @media (min-width: 480px) and (max-width: 768px) {
 	html {
 		zoom: 130%;
+	}
+	#quran {
+		.page div.sura {
+			margin-right: -10px;
+			margin-left: -10px;
+		}
 	}
 }
